--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
   box-sizing: border-box;
   text-align: center;
   border-radius: 10px;
-  box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.4);
   border: 1px solid #eaeaea;
   overflow: hidden;
   display: flex;
@@ -262,7 +262,7 @@ button:hover::before {
   box-sizing: border-box;
   text-align: center;
   border-radius: 10px;
-  box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+  box-shadow: 0 5px 15px rgba(0,0,0,0.4);
   border: 1px solid #eaeaea;
   overflow: hidden;
   display: flex;
@@ -298,7 +298,7 @@ button:hover::before {
 .detalles iframe {
   border: none;
   border-radius: 12px;
-  box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+  box-shadow: 0 4px 12px rgba(0,0,0,0.4);
   margin-bottom: 1.5rem;
   width: 100%;
   height: 200px;
