--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
   padding: 2rem;
   box-sizing: border-box;
   text-align: center;
-  border-radius: 10px;
+  border-radius: 25px;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.4);
   border: 1px solid #eaeaea;
   overflow: hidden;
@@ -40,6 +40,34 @@ body {
   border-radius: 10px;
   opacity: 0.2;
   z-index: -1; 
+}
+.stickersin {
+  position: absolute;
+  bottom: -30px;
+  left: -30px;
+  background: url('photo1.png') no-repeat;
+  background-size: contain;
+  width: 250px;
+  height: 250px;
+  pointer-events: none;
+  user-select: none;
+  z-index: 0;
+  transform:  rotate(0deg)  scale(0.8);
+  animation: fadescaleIn 1s ease forwards;
+}
+.stickers2 {
+  position:absolute;
+  bottom: -35px;
+  left: -80px;
+  background: url('Photo2.png') no-repeat;
+  background-size: contain;
+  width: 350px;
+  height: 350px;
+  pointer-events: none;
+  user-select: none; 
+  z-index: 1;
+  transform: rotate(0deg) scale(0.8);
+  animation: fadescaleIn 1s ease forwards;
 }
 
 .flores-izquierda {
@@ -263,7 +291,7 @@ button:hover::before {
   padding: 2rem;
   box-sizing: border-box;
   text-align: center;
-  border-radius: 10px;
+  border-radius: 25px;
   box-shadow: 0 5px 15px rgba(0,0,0,0.4);
   border: 1px solid #eaeaea;
   overflow: hidden;
@@ -287,7 +315,7 @@ button:hover::before {
 
 .detalles p {
   font-family: 'Dancing Script', cursive;
-  font-size: 1rem;
+  font-size: 0.9rem;
   color: #5a3d37;
   margin: 0.2rem 0 1rem 0;
 }
@@ -314,7 +342,7 @@ button:hover::before {
   color: #fff;
   border: none;
   padding: 0.7rem 1.6rem;
-  font-size: 0.75rem;
+  font-size: 0.5rem;
   border-radius: 14px;
   cursor: pointer;
   transition: background-color 0.3s ease;
