--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ body {
   position:absolute;
   bottom: -35px;
   left: -80px;
-  background: url('Photo2.png') no-repeat;
+  background: url('Photo2.png') no-repeat; /*Test Photo number two, between one and two*/
   background-size: contain;
   width: 350px;
   height: 350px;
