--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ body {
   }
 }
 
-.stickers2 {
+.stickersin2 {
   position:absolute;
   bottom: -35px;
   left: -80px;
@@ -76,7 +76,7 @@ body {
   height: 350px;
   pointer-events: none;
   user-select: none; 
-  z-index: 0;
+  z-index: 10;
   transform: rotate(0deg) scale(0.8);
   animation: fadescaleIn 1s ease forwards;
 }
@@ -364,7 +364,7 @@ button:hover::before {
   color: #fff;
   border: none;
   padding: 0.7rem 1.6rem;
-  font-size: 0.5rem;
+  font-size: 0.7rem;
   border-radius: 14px;
   cursor: pointer;
   transition: background-color 0.3s ease;
