--- a/style.css
+++ b/style.css
@@ -68,12 +68,12 @@ body {
 
 .stickersin2 {
   position:absolute;
-  bottom: -35px;
-  left: -80px;
-  background: url('photo2.png') no-repeat; /*Test Photo number two, between one and two*/
+  bottom: -50px;
+  left: -5px;
+  background: url('chair1.png') no-repeat; /*Test Photo number two, between one and two*/
   background-size: contain;
-  width: 350px;
-  height: 350px;
+  width: 250px;
+  height: 250px;
   pointer-events: none;
   user-select: none; 
   z-index: 2;
